ML: Add various solutions to Colab Notebooks 4-5-6-7-8
Signed-off-by: Gianmarco Scarano <gianmarcoscarano@gmail.com>

--- a/test/Exercises/1. Exercise - Classification Evaluation.ipynb
+++ b/test/Exercises/1. Exercise - Classification Evaluation.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 212,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 189,
+      "execution_count": 2,
       "metadata": {
         "id": "0nHa8mpWbAEp"
       },
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 190,
+      "execution_count": 3,
       "metadata": {
         "id": "JkazgPcGbJhT"
       },
@@ -206,6 +206,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "DB = datasets.load_boston()\n",
+        "dataset_name = \"Boston\"\n",
+        "class_names = np.array([str(c) for c in DB.target_names])\n",
+        "X_all = DB.data\n",
+        "y_all = DB.target"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "QvbEt6KwfSVm"
@@ -218,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 192,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
