--- a/test/Exercises/3. Exercise - SPAM Classification.ipynb
+++ b/test/Exercises/3. Exercise - SPAM Classification.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -53,7 +53,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.feature_extraction.text import *\n",
         "from sklearn.naive_bayes import *\n",
-        "from sklearn.metrics import confusion_matrix, classification_report\n",
+        "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n",
         "\n",
         "print('Libraries imported.')"
       ]
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -123,7 +123,7 @@
       ],
       "source": [
         "# example path of dataset copied in My Drive folder: /content/drive/My Drive/SMSSpamCollection'\n",
-        "filename = 'C:/Users/Gianmarco/Università/MachineLearning/test/Datasets/SMSSpamCollection'\n",
+        "filename = 'C:/Users/Gianmarco/Università-Git/MachineLearning/test/Datasets/SMSSpamCollection'\n",
         "db = pd.read_csv(filename, sep='\\t', header=None, names=['label', 'text'])\n",
         "print('File loaded: %d samples.' %(len(db.label)))"
       ]
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -152,9 +152,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "- ID: 4128\n",
+            "- ID: 1211\n",
             "- Label: ham\n",
-            "- Text: Sorry, I'll call later\n"
+            "- Text: Guessin you ain't gonna be here before 9?\n"
           ]
         }
       ],
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -308,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -352,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -365,8 +365,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\"['Hello, did you solve ML exercise?']\" has been classified as:  ['ham']\n",
-            "\"['You won $1,000! Call now 1-800-1234567']\" has been classified as:  ['spam']\n"
+            "['Hello, did you solve ML exercise?'] has been classified as:  ['ham']\n",
+            "['You won $1,000! Call now 1-800-1234567'] has been classified as:  ['spam']\n"
           ]
         }
       ],
@@ -402,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -412,12 +412,12 @@
             "Predictions for the two models Bernoulli / Multinomial with the three vectorizers.\n",
             "\n",
             "         Model Vectorizer  Accuracy        \n",
-            "0    Bernoulli    Hashing  0.855605        \n",
-            "1    Bernoulli      Count  0.982063        \n",
-            "2    Bernoulli       TFID  0.970404        \n",
+            "0    Bernoulli    Hashing  0.860987        \n",
+            "1    Bernoulli      Count  0.973991        \n",
+            "2    Bernoulli       TFID  0.974888        \n",
             "3  Multinomial    Hashing  0.000000        \n",
-            "4  Multinomial      Count  0.983857  [BEST]\n",
-            "5  Multinomial       TFID  0.978475        \n"
+            "4  Multinomial      Count  0.981166  [BEST]\n",
+            "5  Multinomial       TFID  0.970404        \n"
           ]
         }
       ],
@@ -443,9 +443,9 @@
         "    \n",
         "    # X_test contains the inputs reserved for testing purposes.\n",
         "    # This was done above at cell n.9.\n",
-        "    y_pred = model.predict(X_test)\n",
+        "    y_pred = model.predict(X_test).reshape(-1, 1)\n",
         "    \n",
-        "    acc = model.score(X_test, y_test)\n",
+        "    acc = accuracy_score(y_pred, y_test)\n",
         "    \n",
         "    return acc\n",
         "\n",
@@ -497,7 +497,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3.9.13 ('base')",
       "language": "python",
       "name": "python3"
     },
@@ -512,6 +512,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "0245dcb33ee754f1ac52eeb37726094d614f792ee661c1411187169ef218bd3b"
+      }
     }
   },
   "nbformat": 4,
