--- a/test/Exercises/8. Exercise - Multiple Learners.ipynb
+++ b/test/Exercises/8. Exercise - Multiple Learners.ipynb
@@ -30,10 +30,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BSKuPnIXNoq2",
-        "outputId": "a5922352-d678-43e0-fb00-9b470ac7f2fc",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "a5922352-d678-43e0-fb00-9b470ac7f2fc"
       },
       "outputs": [
         {
@@ -99,10 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VVXB7MM10Mz7",
-        "outputId": "99635773-36d4-4881-d748-124a2e640c26",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "99635773-36d4-4881-d748-124a2e640c26"
       },
       "outputs": [
         {
@@ -176,10 +170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hL867hE70WR7",
-        "outputId": "1705523b-a218-49f5-aa16-277b49b9db58",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "1705523b-a218-49f5-aa16-277b49b9db58"
       },
       "outputs": [
         {
@@ -218,10 +209,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5l2Nxq8f0YSZ",
-        "outputId": "b147bcf8-7de5-4f19-b2f6-f8a552125202",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "b147bcf8-7de5-4f19-b2f6-f8a552125202"
       },
       "outputs": [
         {
@@ -293,10 +281,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Q0Y_sIYf0f_G",
-        "vscode": {
-          "languageId": "python"
-        }
+        "id": "Q0Y_sIYf0f_G"
       },
       "outputs": [],
       "source": [
@@ -323,10 +308,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i4J_7Nnn0hp9",
-        "outputId": "3a921b45-36ec-45bd-d3bc-5a93e143fb71",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "3a921b45-36ec-45bd-d3bc-5a93e143fb71"
       },
       "outputs": [
         {
@@ -362,10 +344,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K2mGMYe50kUj",
-        "outputId": "2b62a5df-f6f7-48fd-b3a8-d6e3d3a82138",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "2b62a5df-f6f7-48fd-b3a8-d6e3d3a82138"
       },
       "outputs": [
         {
@@ -408,10 +387,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QexHd2Oe0sLg",
-        "outputId": "98065f06-8e8d-42f7-8597-0630cfaa46ed",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "98065f06-8e8d-42f7-8597-0630cfaa46ed"
       },
       "outputs": [
         {
@@ -448,10 +424,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "v_qHVTOe0ww3",
-        "vscode": {
-          "languageId": "python"
-        }
+        "id": "v_qHVTOe0ww3"
       },
       "outputs": [],
       "source": [
@@ -483,10 +456,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zi9y187a0y_6",
-        "outputId": "75d29906-22fe-4ab9-fba9-0b8282da2b0a",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "75d29906-22fe-4ab9-fba9-0b8282da2b0a"
       },
       "outputs": [
         {
@@ -520,10 +490,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JDt9KPWK001S",
-        "outputId": "a96bdc6a-bdbf-43fc-a5be-940a6191c668",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "a96bdc6a-bdbf-43fc-a5be-940a6191c668"
       },
       "outputs": [
         {
@@ -569,10 +536,7 @@
           "height": 642
         },
         "id": "PfQ3AihC1NN5",
-        "outputId": "64a6e41e-6b9f-45a1-9a26-963e8add0f5c",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "64a6e41e-6b9f-45a1-9a26-963e8add0f5c"
       },
       "outputs": [
         {
@@ -725,8 +689,18 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.13 ('base')",
+      "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "0245dcb33ee754f1ac52eeb37726094d614f792ee661c1411187169ef218bd3b"
+      }
     }
   },
   "nbformat": 4,
